src-tauri/tests/snapshots/graph_fixtures__linear.snap
---
source: tests/graph_fixtures.rs
expression: chieu_gon(& rows)
---
r0 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r1 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r2 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r3 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r4 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r5 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r6 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r7 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r8 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r9 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r10 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r11 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r12 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r13 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r14 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r15 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r16 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r17 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r18 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r19 lane=0 color=0 pass=[] out=[] trunc=0 term=false
