src-tauri/tests/snapshots/graph_fixtures__non-utf8.snap
---
source: tests/graph_fixtures.rs
expression: chieu_gon(& rows)
---
r0 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r1 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r2 lane=0 color=0 pass=[] out=[0->0] trunc=0 term=false
r3 lane=0 color=0 pass=[] out=[] trunc=0 term=false
