src-tauri/tests/snapshots/graph_fixtures__wide.snap
---
source: tests/graph_fixtures.rs
assertion_line: 221
expression: chieu_gon(& rows)
---
r0 lane=0 color=0 pass=[] out=[0->0, 0->1] trunc=0 term=false
r1 lane=1 color=1 pass=[0->0] out=[1->1] trunc=0 term=false
r2 lane=1 color=1 pass=[0->0] out=[1->1] trunc=0 term=false
r3 lane=0 color=0 pass=[1->1] out=[0->0, 0->2] trunc=0 term=false
r4 lane=2 color=2 pass=[0->0, 1->1] out=[2->2] trunc=0 term=false
r5 lane=2 color=2 pass=[0->0, 1->1] out=[2->2] trunc=0 term=false
r6 lane=0 color=0 pass=[1->1, 2->2] out=[0->0, 0->3] trunc=0 term=false
r7 lane=3 color=3 pass=[0->0, 1->1, 2->2] out=[3->3] trunc=0 term=false
r8 lane=3 color=3 pass=[0->0, 1->1, 2->2] out=[3->3] trunc=0 term=false
r9 lane=0 color=0 pass=[1->1, 2->2, 3->3] out=[0->0, 0->4] trunc=0 term=false
r10 lane=4 color=4 pass=[0->0, 1->1, 2->2, 3->3] out=[4->4] trunc=0 term=false
r11 lane=4 color=4 pass=[0->0, 1->1, 2->2, 3->3] out=[4->4] trunc=0 term=false
r12 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4] out=[0->0, 0->5] trunc=0 term=false
r13 lane=5 color=5 pass=[0->0, 1->1, 2->2, 3->3, 4->4] out=[5->5] trunc=0 term=false
r14 lane=5 color=5 pass=[0->0, 1->1, 2->2, 3->3, 4->4] out=[5->5] trunc=0 term=false
r15 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5] out=[0->0, 0->6] trunc=0 term=false
r16 lane=6 color=6 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5] out=[6->6] trunc=0 term=false
r17 lane=6 color=6 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5] out=[6->6] trunc=0 term=false
r18 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6] out=[0->0, 0->7] trunc=0 term=false
r19 lane=7 color=7 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6] out=[7->7] trunc=0 term=false
r20 lane=7 color=7 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6] out=[7->7] trunc=0 term=false
r21 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7] out=[0->0, 0->8] trunc=0 term=false
r22 lane=8 color=8 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7] out=[8->8] trunc=0 term=false
r23 lane=8 color=8 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7] out=[8->8] trunc=0 term=false
r24 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8] out=[0->0, 0->9] trunc=0 term=false
r25 lane=9 color=9 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8] out=[9->9] trunc=0 term=false
r26 lane=9 color=9 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8] out=[9->9] trunc=0 term=false
r27 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9] out=[0->0, 0->10] trunc=0 term=false
r28 lane=10 color=10 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9] out=[10->10] trunc=0 term=false
r29 lane=10 color=10 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9] out=[10->10] trunc=0 term=false
r30 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10] out=[0->0, 0->11] trunc=0 term=false
r31 lane=11 color=11 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10] out=[11->11] trunc=0 term=false
r32 lane=11 color=11 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10] out=[11->11] trunc=0 term=false
r33 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11] out=[0->0, 0->12] trunc=0 term=false
r34 lane=12 color=12 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11] out=[12->12] trunc=0 term=false
r35 lane=12 color=12 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11] out=[12->12] trunc=0 term=false
r36 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12] out=[0->0] trunc=1 term=false
r37 lane=13 color=0 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12] out=[13->13] trunc=0 term=false
r38 lane=13 color=0 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12] out=[13->13] trunc=0 term=false
r39 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13] out=[0->0] trunc=1 term=false
r40 lane=14 color=1 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13] out=[14->14] trunc=0 term=false
r41 lane=14 color=1 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13] out=[14->14] trunc=0 term=false
r42 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14] out=[0->0] trunc=1 term=false
r43 lane=15 color=2 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14] out=[15->15] trunc=0 term=false
r44 lane=15 color=2 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14] out=[15->15] trunc=0 term=false
r45 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15] out=[0->0] trunc=1 term=false
r46 lane=16 color=3 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15] out=[16->16] trunc=0 term=false
r47 lane=16 color=3 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15] out=[16->16] trunc=0 term=false
r48 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16] out=[0->0] trunc=1 term=false
r49 lane=17 color=4 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16] out=[17->17] trunc=0 term=false
r50 lane=17 color=4 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16] out=[17->17] trunc=0 term=false
r51 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17] out=[0->0] trunc=1 term=false
r52 lane=18 color=5 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17] out=[18->18] trunc=0 term=false
r53 lane=18 color=5 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17] out=[18->18] trunc=0 term=false
r54 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18] out=[0->0] trunc=1 term=false
r55 lane=19 color=6 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18] out=[19->19] trunc=0 term=false
r56 lane=19 color=6 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18] out=[19->19] trunc=0 term=false
r57 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19] out=[0->0] trunc=1 term=false
r58 lane=20 color=7 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19] out=[20->20] trunc=0 term=false
r59 lane=20 color=7 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19] out=[20->20] trunc=0 term=false
r60 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20] out=[0->0] trunc=1 term=false
r61 lane=21 color=8 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20] out=[21->21] trunc=0 term=false
r62 lane=21 color=8 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20] out=[21->21] trunc=0 term=false
r63 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21] out=[0->0] trunc=1 term=false
r64 lane=22 color=9 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21] out=[22->22] trunc=0 term=false
r65 lane=22 color=9 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21] out=[22->22] trunc=0 term=false
r66 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21, 22->22] out=[0->0] trunc=1 term=false
r67 lane=23 color=10 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21, 22->22] out=[23->23] trunc=0 term=false
r68 lane=23 color=10 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21, 22->22] out=[23->23] trunc=0 term=false
r69 lane=0 color=0 pass=[1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21, 22->22, 23->23] out=[0->0] trunc=1 term=false
r70 lane=24 color=11 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21, 22->22, 23->23] out=[24->24] trunc=0 term=false
r71 lane=24 color=11 pass=[0->0, 1->1, 2->2, 3->3, 4->4, 5->5, 6->6, 7->7, 8->8, 9->9, 10->10, 11->11, 12->12, 13->13, 14->14, 15->15, 16->16, 17->17, 18->18, 19->19, 20->20, 21->21, 22->22, 23->23] out=[24->24] trunc=0 term=false
r72 lane=0 color=0 pass=[1->0, 2->0, 3->0, 4->0, 5->0, 6->0, 7->0, 8->0, 9->0, 10->0, 11->0, 12->0, 13->0, 14->0, 15->0, 16->0, 17->0, 18->0, 19->0, 20->0, 21->0, 22->0, 23->0, 24->0] out=[] trunc=0 term=false
